# boilerplate

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.MD  conftest.py  db.sqlite3  ex.env  pyproject.toml  pytest.ini  requirements.txt
apis/: urls.py
apis/v1/: urls.py
apis/v1/tests/: __init__.py  conftest.py  test_django_setup.py  test_user_api.py
apis/v1/user/: urls.py
backend/: example.app  example.env  requirements.txt
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py
baseapps/core/: admin.py  authbackend.py  forms.py  manager.py  models.py  urls.py
baseapps/core/migrations/: 0001_initial.py
baseapps/sdm_management/: apps.py  models.py
config/: urls.py
config/auth/: __init__.py
config/settings/: base.py  databases.py  dev.py  development.py  envcommon.py  factory.py  local.py  prod.py  production.py
config/settings/extension/: __init__.py  loggers.py
config/settings/test/: local.py
core/authentication/: admin.py  apps.py  manager.py  models.py
core/authentication/migrations/: 0001_initial.py
core/services/: apps.py
core/utils/: apps.py
frontend/vue-frontend/: package.json
helper/: models.py
installer/: basic_requirements.txt  requirements.txt
middlewares/: request_id.py
modules/auth/: auth_rules.py  settings.py
modules/user/: admin.py  apps.py  conftest.py  forms.py  models.py
modules/user/migrations/: 0001_initial.py
modules/user/tests/: __init__.py  test_models.py
proc/: supervisor.conf
template/: base.html  index.html
template/includes/: navigation.html
template/snippets/: bootstrap.html  navbar.html  script.html
tests/: test_db_settings.py  test_factory.py
