[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["rede akbar wijaya <rede@soberdev.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
pydantic = "^2.4.2"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.9"
django-extensions = "^3.2.1"
django-simple-history = "^3.4.0"
django-structlog = "^6.0.0"
django-unfold = "^0.12.0"
django-debug-toolbar = "^3.8.1"
django-lifecycle = "^1.0.0"
daphne = "^4.0.0"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
ipython = "^8.7.0"
pre-commit = "^2.21.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-sugar = "^0.9.6"
pytest-mock = "^3.10.0"
pytest-django = "^4.5.2"
faker = "^15.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
